# mastodon-update-bot

./: .dockerignore  .flake8  Dockerfile  Pipfile  Procfile  app.json  db.sqlite  pyproject.toml  setup.py  shell.py  tmp.py
alembic/: env.py
alembic/versions/: 0ac30c75d49d_.py  800b65046cc2_create_web_domain.py  8d84111ae648_add_last_tls_notified.py  b79381179732_first.py  e861e7d38f07_add_update_type.py
bot/: __main__.py  logging.py  manager.py  mastodon.py  models.py
mastodon_update_bot/: __init__.py  __main__.py  engine.py  models.py
